# data-platform-copilot

./: .gitignore  CLAUDE.md  Dockerfile  KNOWN_LIMITATIONS.md  Makefile  PROD_VALIDATION_CHECKLIST.md  README.md  copilot_spec.yaml  data-platform-copilot-v0.13.0.tar.gz.sha256  logging.yaml  openapi.json  openapi_snapshot.json  packaging_manifest.json  project_file_paths.txt  pyproject.toml  pytest.ini  release_metadata.json  test.sh
app/: main.py
configs/: spark_conf_default.json
dags/: example_pipeline_pipeline.py
deploy/: chart.yaml  deployment.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stage14.yml  service.yaml  values.yaml
docs/: RUNBOOK.md  production_checklist.md  role_matrix.md  stage3_contract.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts
tests/: conftest.py  run_build_intent_tests.sh  test_advisor_explain_api.py  test_ai_explainer.py  test_ai_gateway.py  test_ai_hardening.py  test_ai_memory_triage.py  test_api_versioning.py  test_architecture_audit_api.py  test_auth_prod_guard.py  test_billing_ledger_budget.py  test_billing_summary_api.py  test_build_approvals_api.py  test_build_v2_contract.py  test_cache_stats_api.py  test_compiler_contract_plan_intel_policy_build_flow.py  test_cost_estimator_v2.py  test_dag_gen.py  test_dirty_workspace_block.py  test_execution_actuals_to_ledger.py  test_execution_backend_registry.py  test_execution_cancel.py  test_execution_docker_backend.py  test_execution_graph.py  test_execution_lifecycle.py  test_execution_lifecycle_hardening.py  test_execution_path_traversal.py  test_execution_policy_enforcement.py  test_federation_api.py  test_graph_circular.py  test_graph_dependencies.py  test_head_drift.py  test_intent_contract.py  test_intent_hybrid.py  test_ledger_concurrent_writes.py  test_local_backend_no_exec.py  test_metrics_health_increment.py  test_metrics_snapshot.py  test_openapi_snapshot.py  test_packaging_manifest_check.py  (+48 more)
tools/: build_release_tarball.py  check_v1_readiness.py  gen_packaging_manifest.py  generate_release_metadata.py  runtime_manifest.py  smoke_test.ps1  smoke_test.sh  (+3 more)
(+252 files in other folders)
