[project]
name = "data-platform-copilot"
version = "0.1.0"
description = "Enterprise-grade GenAI Copilot for Data Platform Engineering"
requires-python = ">=3.10"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "streamlit",
  "jinja2",
  "pyyaml",
  "requests"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100



[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["workspace", ".venv", "dist", "build", ".git"]
pythonpath = ["."]
addopts = "-q"

[project.optional-dependencies]
dev = [
    "fastapi",
    "starlette",
]