[project]
name = "data-platform-copilot"
version = "0.1.0"
description = "Enterprise-grade GenAI Copilot for Data Platform Engineering"
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.111.0",
  "starlette==0.37.2",
  "pydantic==2.9.2",
  "uvicorn==0.19.0",
  "jinja2==3.1.6",
  "pyyaml==6.0.3",
  "requests==2.31.0",
  "streamlit>=1.30.0,<2",  # pinned: prevent major version surprises
  "PyJWT==2.10.1",
  "prometheus-client==0.20.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["workspace", ".venv", "dist", "build", ".git"]
pythonpath = ["."]
addopts = "-q"

[project.optional-dependencies]
dev = [
  "fastapi==0.111.0",
  "starlette==0.37.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "workspace*", "deploy*", "ui*", "frontend*", "templates*", "knowledge_base*", "outputs*", "mkdir*"]

